; ModuleID = '/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_ops_term.c'
source_filename = "/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_ops_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c">inproc://cameraops\00", align 1
@__const.ops_term.msg = private unnamed_addr constant %struct.TYPE_3__ { i32 -1 }, align 4
@ZMQ_DONTWAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ops_term to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ops_term() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_3__, align 4
  %3 = call i32* @zsock_new_push(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = call i32 @assert(i32* %4)
  %6 = bitcast %struct.TYPE_3__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.TYPE_3__* @__const.ops_term.msg to i8*), i64 4, i1 false)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @zsock_resolve(i32* %7)
  %9 = load i32, i32* @ZMQ_DONTWAIT, align 4
  %10 = call i32 @zmq_send(i32 %8, %struct.TYPE_3__* %2, i32 4, i32 %9)
  %11 = call i32 @zsock_destroy(i32** %1)
  ret void
}

declare dso_local i32* @zsock_new_push(i8*) #1

declare dso_local i32 @assert(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @zmq_send(i32, %struct.TYPE_3__*, i32, i32) #1

declare dso_local i32 @zsock_resolve(i32*) #1

declare dso_local i32 @zsock_destroy(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
